Discovery improved to level where is able to identify Bambu Lab printer available in local network as part of fast scan and display this information in scan report.